# opendetect

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-release.yml
docs/: Makefile  conf.py  index.md  make.bat  requirements.txt
docs/_static/: custom.css
docs/contributing/: development.md  index.md
docs/getting-started/: cli.md  installation.md  python.md  runtimes.md
docs/guides/: benchmarks.md  model-registry.md
docs/reference/: cli-reference.md  python-api.md
opendetect/: __init__.py  _cli_utils.py  detector.py  download.py  registry.py  types.py
opendetect/cli/: benchmark.py  inference.py  main.py  models.py
opendetect/models/: __init__.py  _nms.py  _viz.py  base.py  bytetrack.py  rfdetr.py  rtmdet.py  yolox.py
